--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
                 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
                 sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #000000 0%, #1a1a1a 100%);
             min-height: 100vh;
             display: flex;
             align-items: center;
@@ -24,16 +24,17 @@
         }
 
         .container {
-            background: white;
+            background: #ffffff;
             border-radius: 12px;
-            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5);
             padding: 60px 40px;
             max-width: 500px;
             text-align: center;
+            border: 2px solid #000000;
         }
 
         h1 {
-            color: #333;
+            color: #000000;
             font-size: 2.5em;
             margin-bottom: 20px;
             font-weight: 700;
@@ -45,28 +46,29 @@
         }
 
         p {
-            color: #666;
+            color: #333333;
             font-size: 1.1em;
             margin-bottom: 30px;
             line-height: 1.6;
         }
 
         .email-section {
-            background: #f8f9fa;
+            background: #f5f5f5;
             padding: 30px;
             border-radius: 8px;
             margin: 30px 0;
+            border: 1px solid #cccccc;
         }
 
         .email-section p {
             margin-bottom: 15px;
-            color: #555;
+            color: #333333;
             font-size: 0.95em;
         }
 
         a {
             display: inline-block;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #000000;
             color: white;
             text-decoration: none;
             padding: 14px 30px;
@@ -74,11 +76,14 @@
             font-weight: 600;
             transition: transform 0.2s, box-shadow 0.2s;
             font-size: 1.05em;
+            border: 2px solid #000000;
         }
 
         a:hover {
             transform: translateY(-2px);
-            box-shadow: 0 5px 20px rgba(102, 126, 234, 0.4);
+            background: #ffffff;
+            color: #000000;
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
         }
 
         .social-links {
@@ -92,12 +97,13 @@
         .social-links a {
             padding: 10px 20px;
             font-size: 0.9em;
-            background: #f0f0f0;
-            color: #333;
+            background: #f5f5f5;
+            color: #000000;
+            border: 1px solid #000000;
         }
 
         .social-links a:hover {
-            background: #667eea;
+            background: #000000;
             color: white;
         }
 
